--- a/project-manager.html
+++ b/project-manager.html
@@ -40,6 +40,10 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://jobs.lever.co/aid-driving/5e28dba4-6332-4b89-b5f7-28f4b9f84fc5'>Autonomous Intelligent Driving GmbH - Program Manager - Security, Privacy & Compliance</a></h5> 
+<p><span class="badge badge-light">Munich</span></p>
+<p>Posted on: 2019-10-29</p>
+<hr/>
 <h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999698368790-project-manager-future-mobility'>Bosch Group Project Manager - Future Mobility | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
@@ -49,7 +53,7 @@
 <p>Posted on: 2019-10-29</p>
 <hr/>
 <h5><a href='https://cbre.referrals.selectminds.com/CBREGRTbQy'>Sr Project Manager - CBRE Careers</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">United States</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
 <h5><a href='https://www.sigmarrecruitment.com/job/quality-systems-project-manager-4/'>Quality Systems Project Manager | Ref  JPQSPROJA - Sigmar</a></h5> 
@@ -112,7 +116,7 @@
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qKd9VfwL&k=Job&j=oNfs7fwl&__jvst=Employee&__jvsd=se8Imfwa&__jvsc=Twitter&bid=nksWmMwl'>Zensar Technologies Careers - Project Manager-Agile</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qKd9VfwL&k=Job&j=oNfs7fwl&__jvst=Employee&__jvsd=se8Imfwa&__jvsc=Twitter&bid=nksWmMwl'>Zensar Technologies Careers - Project Manager-Agile</a></h5> 
 <p><span class="badge badge-light">San Jose, California</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
@@ -158,7 +162,7 @@
 <p><span class="badge badge-light">Centennial, COUnited States  ?  ?  ?  ?  United States</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='http://stellarinnovations.applytojob.com/apply/5iRCxooPcK/IT-Project-Manager'>IT Project Manager - Stellar Innovations - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://stellarinnovations.applytojob.com/apply/5iRCxooPcK/IT-Project-Manager'>IT Project Manager - Stellar Innovations - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -174,7 +178,7 @@
 <p><span class="badge badge-light">San Antonio, Texas</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=oLf4afwY&__jvst=Employee+Referral&__jvsd=sJHwDfwj&__jvsc=Twitter&bid=n39TmMwI'>ServiceNow Careers - Customer Experience Program Manager</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=oLf4afwY&__jvst=Employee+Referral&__jvsd=sJHwDfwj&__jvsc=Twitter&bid=n39TmMwI'>ServiceNow Careers - Customer Experience Program Manager</a></h5> 
 <p><span class="badge badge-light">San Francisco, California  Santa Clara, California  San Francisco Santa Clara, CA</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
@@ -194,7 +198,7 @@
 <p><span class="badge badge-light">San Jose, California</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/caminar/job/oqLqbfww'>Caminar Careers - Clinical Program Manager, Substance Use</a></h5> 
+<h5><a href='https://jobs.jobvite.com/caminar/job/oqLqbfww'>Caminar Careers - Clinical Program Manager, Substance Use</a></h5> 
 <p><span class="badge badge-light">San Jose, California</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -206,7 +210,7 @@
 <p><span class="badge badge-light">San Francisco, CA  San Francisco, CA</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='http://intellipro.applytojob.com/apply/44bHkkZPjZ/Senior-Project-Manager'>Senior Project Manager - IntelliPro Group Inc. - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://intellipro.applytojob.com/apply/44bHkkZPjZ/Senior-Project-Manager'>Senior Project Manager - IntelliPro Group Inc. - Career Page</a></h5> 
 <p><span class="badge badge-light">Sunnyvale, CA</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -236,7 +240,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/FultonGarrickLtd/743999694344947-project-manager-software-implementation-birmingham'>Fulton Garrick Ltd Project Manager - Software Implementation - Birmingham | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/FultonGarrickLtd/743999694344947-project-manager-software-implementation-birmingham'>Fulton Garrick Ltd Project Manager - Software Implementation - Birmingham | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -272,7 +276,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/twilio/jobs/1927463'>Job Application for Program Manager, Talent Acquisition at Twilio</a></h5> 
+<h5><a href='https://boards.greenhouse.io/twilio/jobs/1927463'>Job Application for Program Manager, Talent Acquisition at Twilio</a></h5> 
 <p><span class="badge badge-light">Denver, CO</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -334,7 +338,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Broadridge/743999698328993-senior-project-manager-contract-'>Broadridge Senior Project Manager (Contract) | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Broadridge/743999698328993-senior-project-manager-contract-'>Broadridge Senior Project Manager (Contract) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -386,11 +390,11 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://jobs.jobware.net/Job/Scrum-Master-Project-Manager-m-f-x-Division-Customer-Management.342221935.html?jw_chl_seg=YOURJOBINGERMANY&skin=zaehlpixel_only'>Scrum Master / Project Manager (m/f/x) Division Customer Management | Wirecard Technologies GmbH | Job</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobware.net/Job/Scrum-Master-Project-Manager-m-f-x-Division-Customer-Management.342221935.html?jw_chl_seg=YOURJOBINGERMANY&skin=zaehlpixel_only'>Scrum Master / Project Manager (m/f/x) Division Customer Management | Wirecard Technologies GmbH | Job</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://medtronic.referrals.selectminds.com/jobs/program-manager-70063'>Program Manager - Medtronic Careers</a></h5> 
+<h5><a href='https://medtronic.referrals.selectminds.com/jobs/program-manager-70063'>Program Manager - Medtronic Careers</a></h5> 
 <p><span class="badge badge-light">United States France Italy Thailand</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -456,10 +460,6 @@ Manager to plan, drive and execute in-person premium multi-track events under?..
 <h5><a href='http://rockleyphotonics.applytojob.com/apply/PvnvOYm670/Technical-Program-Manager-Photonics-Systems-Engineering'>Technical Program Manager- Photonics Systems Engineering - Rockley Photonics - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
-<hr/>
-<h5><a href='https://cbre.referrals.selectminds.com/CBRElwMbPh'>Senior Project Manager - Commercial Construction - CBRE Careers</a></h5> 
-<p><span class="badge badge-light">Sunnyvale United States</span></p>
-<p>Posted on:: 2019-10-28</p>
 <hr/>
 
 
